# ienv

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  test_file.txt
.github/workflows/: unit-tests.yml
LICENSE/: index.html
docs/: index.md
ienv/: README.md  pyproject.toml
ienv/src/ienv/: cache.py  ienv.py  main.py  squish.py  stats.py  venv.py
ienv/tests/: test_args.py  test_backup.py  test_paths.py  test_symlink.py  test_venv.py  test_venv_dir.py
pydoc/: index.html
scripts/: activate.sh  clean.sh  coverage.sh  dist.sh  docs.sh  install-dev.sh  install-pre-commit.sh  install.sh  release.sh  test.sh  update-pre-commit.sh  venv.sh
search/: search_index.json
src/ienv/: cache.py  stats.py
tests/: test_args.py  test_backup.py  test_symlink.py  test_venv.py
